--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.1",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.1",
+    "ng2-charts": "^2.3.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
