--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.1",
     "ng2-charts": "^2.3.3",
