--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jquery": "^3.5.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.1",
     "ng2-charts": "^2.3.3",
