--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@types/jquery": "^3.5.1",
+    "@types/underscore": "^1.10.21",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
@@ -34,6 +35,7 @@
     "rxjs": "~6.5.4",
     "slick-carousel": "^1.8.1",
     "tslib": "^1.10.0",
+    "underscore": "^1.10.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
