close #29 issue is fixed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.1",
     "ng2-charts": "^2.3.3",
@@ -42,9 +43,9 @@
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.54",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
