--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~9.1.9",
     "@angular/cdk": "^10.1.2",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/google-maps": "^10.2.0",
     "@angular/material": "^10.1.2",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@types/google-maps": "^3.2.2",
+    "@types/googlemaps": "^3.39.13",
     "@types/jquery": "^3.5.1",
     "@types/underscore": "^1.10.21",
     "chart.js": "^2.9.3",
