--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/animations": "~9.1.9",
+    "@angular/animations": "^10.1.1",
     "@angular/cdk": "^10.1.2",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
